Agregue endpoint de horarios disponibles por médico y fecha